--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <h1>Bem vindos a minha página </h1>
 <p>Aqui vocês terão acesso aos meus games.</p>
+  <a href="https://jacobsky99.github.io/matemagica/">Meu Primeiro Jogo</a>
 
 </body>
 </html>
